--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <h1 style="position: relative;top: 12px; text-align: center; font-size: 52px;font-weight: 500;color:rgb(54, 54, 54);">Invest in everything</h1>
     <p style="text-align: center;font-size: 22px;font-weight: 500;color: rgb(73, 73, 73);">Online platform to invest in stocks, derivatives, mutual funds, ETFs, bonds, and more.</p>
     
-    <button style="display: flex; position: relative;cursor:pointer; left: 100vh;width: 160px;height: 6vh;padding-left: 40px;padding-right: 40px;padding-top: 8px;margin-top: 5px; color: white;background-color: #0078d4;border-radius: 3px;border: 1px solid white;">Signup now</button>
+    <button style="position: relative;cursor:pointer; left: 90vh;width: 130px;height: 3.8vh;padding-left: 20px;padding-right: 20px;padding-top: 8px;padding-bottom: 12px;color: white;background-color: #0078d4;border-radius: 3px;border: 1px solid white;">Signup now</button>
     
 </body>
 </html>
